--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,4 +3,10 @@
     <img src="assets/imgs/logo.png"/>
     <p>Movie Center</p>
   </div>
+
+  <div class="logoRow">
+    <img src="assets/imgs/logo.png"/>
+    <p>{{'home.title' | translate}}</p>
+  </div>
+
 </div>
