--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="componentDiv">
-    <app-home></app-home>
+    <app-home *ngIf="selectedComponent==='home'"></app-home>
   </div>
 </div>
 
