--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,13 @@ p {
   text-transform: none;
   font-family: "SF Pro Text";
 }
+
+.cursor {
+  cursor: pointer;
+}
+
+
+
 /* You can add global styles to this file, and also import other style files */
 :root {
 /** CUSTOM COLOR **/
