--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,8 +4,13 @@
     <p>Movie Center</p>
   </div>
 
-  <div class="logoRow">
-    <img src="assets/imgs/logo.png"/>
+  <div class="logoRow" (click)="changeView('home')">
+    <img src="assets/imgs/home.png"/>
+    <p>{{'home.title' | translate}}</p>
+  </div>
+
+  <div class="logoRow cursor" (click)="changeView('comingsoon')">
+    <img src="assets/imgs/home.png"/>
     <p>{{'home.title' | translate}}</p>
   </div>
 
