--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,10 +1,11 @@
 <div class="mainPage">
   <div class="siderbarDiv">
-    <app-sidebar></app-sidebar>
+    <app-sidebar (sidebarValue)="changeView($event)"></app-sidebar>
   </div>
 
   <div class="componentDiv">
     <app-home *ngIf="selectedComponent==='home'"></app-home>
+    <!-- <app-comingsoon *ngIf="selectedComponent==='comingsoon'"></app-comingsoon> -->
   </div>
 </div>
 
