--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -4,6 +4,11 @@
   </div>
 
   <div class="componentDiv">
+
+    <!-- Header -->
+    <app-header></app-header>
+    <!-- Header -->
+
     <app-home *ngIf="selectedComponent==='home'"></app-home>
     <!-- <app-comingsoon *ngIf="selectedComponent==='comingsoon'"></app-comingsoon> -->
   </div>
