--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,77 @@ p {
   cursor: pointer;
 }
 
+// Class for modals background
+.backdrop {
+  background: var(--grey-text-color);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: 999;
+  opacity: 0.5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// Class for modal
+.modal {
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  opacity: 1;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-wrapper {
+  // top: 0;
+  width: 50%;
+
+  .modal-content {
+    width: 100%;
+    background: var(--white-app-color);
+    border-radius: 10px;
+    padding: 10px;
+
+    .modalTitle {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      p {
+        color: var(--black-text-color);
+        font-weight: bold;
+        margin: auto;
+        text-align: center;
+      }
+    }
+
+    .modalClose:hover {
+      box-shadow: 0 0 3px var(--shadow-grey-color);
+    }
+
+    .modalClose {
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+      padding: 10px;
+      border-radius: 10px;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: var(--light-background-color);
+      img {
+        filter: invert(20%) sepia(76%) saturate(1950%) hue-rotate(211deg) brightness(94%) contrast(105%)
+      }
+    }
+  }
+}
+
 
 /* You can add global styles to this file, and also import other style files */
 :root {
