--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,17 +1,28 @@
 <div class="sidebar">
-  <div class="logoRow">
+  <div class="logoRow cursor" (click)="changeView('home')">
     <img src="assets/imgs/logo.png"/>
-    <p>Movie Center</p>
+    <p>{{'pageTitle.title' | translate}}</p>
   </div>
 
-  <div class="logoRow" (click)="changeView('home')">
-    <img src="assets/imgs/home.png"/>
-    <p>{{'home.title' | translate}}</p>
+  <div class="logoRow cursor" (click)="changeView('home')">
+    <img src="assets/imgs/home1.png"/>
+    <p>{{'sidebar.homepage' | translate}}</p>
+  </div>
+
+  <div class="logoRow cursor" (click)="changeView('playingNow')">
+    <img src="assets/imgs/movieLogo1.png"/>
+    <p>{{'sidebar.playingNow' | translate}}</p>
   </div>
 
   <div class="logoRow cursor" (click)="changeView('comingsoon')">
-    <img src="assets/imgs/home.png"/>
-    <p>{{'home.title' | translate}}</p>
+    <img src="assets/imgs/movieLogo1.png"/>
+    <p>{{'sidebar.comingSoon' | translate}}</p>
   </div>
+
+  <div class="logoRow cursor" (click)="changeView('contact')">
+    <img src="assets/imgs/contact.png"/>
+    <p>{{'sidebar.contact' | translate}}</p>
+  </div>
+
 
 </div>
