--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,24 +4,40 @@
     <p>{{'pageTitle.title' | translate}}</p>
   </div>
 
-  <div class="logoRow cursor" (click)="changeView('home')">
-    <img src="assets/imgs/home1.png"/>
-    <p>{{'sidebar.homepage' | translate}}</p>
+  <div class="optionRow cursor" (click)="changeView('home')">
+    <div class="optionImg">
+      <img src="assets/imgs/home1.png"/>
+    </div>
+    <div class="optionDescr">
+      <p>{{'sidebar.homepage' | translate}}</p>
+    </div>
   </div>
 
-  <div class="logoRow cursor" (click)="changeView('playingNow')">
-    <img src="assets/imgs/movieLogo1.png"/>
-    <p>{{'sidebar.playingNow' | translate}}</p>
+  <div class="optionRow cursor" (click)="changeView('playingNow')">
+    <div class="optionImg">
+      <img src="assets/imgs/movieLogo1.png"/>
+    </div>
+    <div class="optionDescr">
+      <p>{{'sidebar.playingNow' | translate}}</p>
+    </div>
   </div>
 
-  <div class="logoRow cursor" (click)="changeView('comingsoon')">
-    <img src="assets/imgs/movieLogo1.png"/>
-    <p>{{'sidebar.comingSoon' | translate}}</p>
+  <div class="optionRow cursor" (click)="changeView('comingsoon')">
+    <div class="optionImg">
+      <img src="assets/imgs/movieLogo1.png"/>
+    </div>
+    <div class="optionDescr">
+      <p>{{'sidebar.comingSoon' | translate}}</p>
+    </div>
   </div>
 
-  <div class="logoRow cursor" (click)="changeView('contact')">
-    <img src="assets/imgs/contact.png"/>
-    <p>{{'sidebar.contact' | translate}}</p>
+  <div class="optionRow cursor" (click)="changeView('contact')">
+    <div class="optionImg">
+      <img src="assets/imgs/contact.png"/>
+    </div>
+    <div class="optionDescr">
+      <p>{{'sidebar.contact' | translate}}</p>
+    </div>
   </div>
 
 
