--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -6,9 +6,7 @@
   background: var(--light-background-color);
   box-shadow: 1px 1px 3px var(--shadow-grey-color);
   border-right: 3px solid var(--blue-app-color);
-  :hover {
-    background-color: var(--bright-blue-color);
-  }
+
 
   .logoRow {
     width: 100%;
@@ -17,10 +15,10 @@
     justify-content: center;
     padding-bottom: 10px;
     padding-top: 10px;
-    
+
     img {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       margin-right: 15px;
     }
     p {
@@ -31,5 +29,43 @@
       width: fit-content;
       text-align: center;
     }
+  }
+
+  .optionRow:hover {
+    background-color: var(--bright-blue-color);
+  }
+  .optionRow {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    .optionImg{
+      width: 20%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-left: 10px;
+      img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+
+    .optionDescr {
+      width: 80%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      p {
+        color: var(--black-text-color);
+        font-size: 20px;
+        font-weight: bold;
+        //letter-spacing: .5cm;
+        width: fit-content;
+        text-align: center;
+      }
+    }
+
   }
 }
