--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -114,6 +114,8 @@ p {
   --very-light-blue: #e7f3fc;
   --light-grey-42: #424242;
   --light-red-color-background: #FFF0F0;
+  --green-button-color: #4caf50;
+  --green-button-color-hover: #45a049;
   --red-color: #ff0000;
   --blue: #cbecff;
   --purple-color: #BF40BF;
