login API , signup API, login form, sign up form

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -6,6 +6,6 @@
 
   <div class="headerDiv cursor" (click)="showLogin()" >
     <img  src="assets/imgs/header/person.svg"/>
-    <p>{{'header.login' | translate}}</p>
+    <p>{{'header.loginSignUp' | translate}}</p>
   </div>
 </div>
