--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -9,3 +9,149 @@
     font-weight: bold;
   }
 }
+
+.loginForm {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  form {
+    margin-top: 10px;
+    width: 100%;
+    background: var(--light-background-color);
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+  .formLabel {
+    color: var(--black-text-color);
+    font-size: 15px;
+    margin-bottom: 5px;
+  }
+
+
+  .formInput {
+    margin-bottom: 5px;
+    background: var(--white-app-color);
+    width: 100%;
+    min-width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid var(--blue-app-color);
+    border-radius: 10px;
+    padding: 10px 0;
+    img {
+      width: 30px;
+      height: 30px;
+      margin: 0 10px;
+    }
+    input {
+      width: 100%;
+      border: none;
+      outline: none;
+      margin-right: auto;
+      font-size: 20px;
+      letter-spacing: .2em;
+      color: var(--blue-app-color);
+      caret-color: var(--blue-app-color);
+    }
+  }
+
+  .buttonRow {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    p {
+      margin-right: auto;
+      cursor: pointer;
+      color: var(--blue-app-color);
+      font-size: 18px;
+    }
+    button {
+      background: var(--blue-app-color);
+      border-radius: 10px;
+      border: none;
+      color: var(--white-app-color);
+      font-weight: bold;
+      padding: 10px;
+    }
+  }
+
+}
+
+.OrRow {
+  margin: 15px 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .blueLine {
+    background: var(--blue-app-color);
+    height: 3px;
+    width: 40%;
+  }
+  .blueOr {
+    color: var(--blue-app-color);
+    font-size: 25px;
+    font-weight: bold;
+  }
+}
+
+.loginButtons {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  button {
+    width: 50%;
+    min-width: fit-content;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 15px;
+    outline: none;
+    cursor: pointer;
+    img {
+      width: 30px;
+      height: 30px;
+      margin-right: 15px;
+    }
+    p {
+      font-size: 20px;
+      font-weight: bold;
+    }
+  }
+
+  .facebookButton {
+    margin-top: 15px;
+    background: #4267B2;
+    border-color: #4267B2;
+    p {
+      color: var(--white-app-color);
+    }
+  }
+}
+
+.invalidInput {
+  border-color: var(--red-color) !important;
+  color: var(--red-color) !important;
+  input {
+    color: var(--red-color) !important;
+    caret-color: var(--red-color);
+  }
+
+  img {
+    filter: invert(14%) sepia(82%) saturate(7387%) hue-rotate(5deg) brightness(97%) contrast(117%);
+  }
+}
+
