--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -94,6 +94,10 @@ p {
   }
 }
 
+.blueIcon {
+  filter: invert(20%) sepia(76%) saturate(1950%) hue-rotate(211deg) brightness(94%) contrast(105%)
+}
+
 
 /* You can add global styles to this file, and also import other style files */
 :root {
