--- a/frontend/src/app/pages/main/main.component.html
+++ b/frontend/src/app/pages/main/main.component.html
@@ -1,19 +1,24 @@
 <app-login *ngIf="showLoginValue" (showLoginEmitter)="showLoginFunction('login',$event)"></app-login>
 <div class="mainPage">
-  <div class="siderbarDiv">
-    <app-sidebar (sidebarValue)="changeView($event)"></app-sidebar>
+  <div class="header">
+  <!-- Header -->
+  <app-header (showLoginEmitter)="showLoginFunction('header',$event)" (sidebarValue)="changeView($event)"></app-header>
+  <!-- Header -->
   </div>
 
   <div class="componentDiv">
-    <!-- Header -->
-    <app-header (showLoginEmitter)="showLoginFunction('header',$event)"></app-header>
-    <!-- Header -->
 
 
-    <app-home *ngIf="selectedComponent==='home'"></app-home>
+    <div class="viewComponent">
+      <app-home *ngIf="selectedComponent==='home'"></app-home>
+      <app-contact *ngIf="selectedComponent==='contact'"></app-contact>
+    </div>
+
+    <!--
+
     <app-playing-now *ngIf="selectedComponent==='playingNow'"></app-playing-now>
     <app-coming-soon *ngIf="selectedComponent==='comingsoon'"></app-coming-soon>
-    <app-contact *ngIf="selectedComponent==='contact'"></app-contact>
+    <app-contact *ngIf="selectedComponent==='contact'"></app-contact>-->
   </div>
 </div>
 
