--- a/frontend/src/app/pages/main/main.component.scss
+++ b/frontend/src/app/pages/main/main.component.scss
@@ -2,14 +2,23 @@
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  background-image: url('../../../assets/imgs/cinema.jpg');
+  background-repeat: repeat;
+  background-size: cover;
   height: 100vh;
-  .siderbarDiv {
-    width: 20%;
-    height: 100%;
+  flex-direction: column;
+  overflow: hidden;
+  .header {
+    width: 100%;
   }
-
   .componentDiv {
-    width: 80%;
+    width: 95%;
+    padding: 2.5% 2.5%;
+    backdrop-filter: blur(10px);
+    height: 100%;
+
+    .viewComponent {
+      height: 100%;
+    }
   }
 }
