Revert "updating ui page"
This reverts commit 12151179315bb86e863c4383462ffbfbad56d2ac.

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,23 +1,11 @@
 <div class="headerRow">
 
-  <div class="logo">
-    <img src="assets/imgs/header/popcorn.png"/>
-    <p>{{'pageTitle.title' | translate}}</p>
-  </div>
-
-  <div class="optionsContent">
-    <div class="cursor" *ngFor="let option of headerOptions" (click)="changeView(option.id)">
-      <img class="whiteIcon" [src]="option.img" />
-      <p>{{option.descr | translate}}</p>
-    </div>
-  </div>
-
   <mat-select *ngIf="isLoading" class="languageSelect" [(value)]="language" (selectionChange)="changeLang()">
     <mat-option *ngFor="let lang of languages" [value]="lang.id">{{lang.descr | translate}}</mat-option>
   </mat-select>
 
   <div class="headerDiv cursor" (click)="showLogin()" >
-    <img class="whiteIcon" src="assets/imgs/header/person.svg"/>
+    <img  src="assets/imgs/header/person.svg"/>
     <p>{{'header.loginSignUp' | translate}}</p>
   </div>
 </div>
