--- a/frontend/src/app/pages/main/main.component.scss
+++ b/frontend/src/app/pages/main/main.component.scss
@@ -2,23 +2,14 @@
   width: 100%;
   display: flex;
   align-items: flex-start;
-  background-image: url('../../../assets/imgs/cinema.jpg');
-  background-repeat: repeat;
-  background-size: cover;
+  justify-content: space-between;
   height: 100vh;
-  flex-direction: column;
-  overflow: hidden;
-  .header {
-    width: 100%;
-  }
-  .componentDiv {
-    width: 95%;
-    padding: 2.5% 2.5%;
-    backdrop-filter: blur(10px);
+  .siderbarDiv {
+    width: 20%;
     height: 100%;
+  }
 
-    .viewComponent {
-      height: 100%;
-    }
+  .componentDiv {
+    width: 80%;
   }
 }
