--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -30,11 +30,13 @@ p {
   height: 100vh;
   position: absolute;
   top: 0;
+  left: 0;
   z-index: 999;
   opacity: 0.5;
   display: flex;
   align-items: center;
   justify-content: center;
+  pointer-events: none;
 }
 
 // Class for modal
