--- a/frontend/src/app/components/admin/movies/movies.component.scss
+++ b/frontend/src/app/components/admin/movies/movies.component.scss
@@ -1,6 +1,9 @@
 .adminComponent {
   width: 100%;
   margin-top: 15px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   .adminTitle {
     color: var(--blue-app-color);
     font-size: 30px;
@@ -34,6 +37,61 @@
         margin-right: 15px;
       }
     }
-
   }
+  .movieList {
+    width: 95%;
+
+
+    .redBorder {
+      border-color: var(--smooth-red-color) !important;
+
+      .movieInfo {
+        .title {
+          color: var(--smooth-red-color) !important;
+        }
+
+        .descr {
+          color: var(--smooth-red-color) !important;
+        }
+      }
+    }
+    .movie {
+      width: 100%;
+      margin: auto;
+      margin-top: 15px;
+      padding: 10px;
+
+      border-radius: 0 10px 10px 0;
+      border: 2px solid var(--blue-app-color);
+      border-left-width: 5px;
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      .imgDiv {
+        width: 100px;
+        height: 100px;
+        background-position: 50% 20%;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+
+      .movieInfo {
+        width: calc(100% - 100px);
+        padding-left: 10px;
+
+        .title {
+          font-weight: bold;
+          font-size: 20px;
+          color: var(--blue-app-color);
+        }
+
+        .descr {
+          margin-top: 15px;
+          font-size: 18px;
+          color: var(--blue-app-color);
+        }
+      }
+    }
+  }
+
 }
