--- a/frontend/src/app/components/admin/create-edit-movie/create-edit-movie.component.scss
+++ b/frontend/src/app/components/admin/create-edit-movie/create-edit-movie.component.scss
@@ -96,7 +96,7 @@
 .uploadButton {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   min-width: 100px;
   background: var(--blue-app-color);
   border-radius: 10px;
@@ -105,6 +105,7 @@
   font-weight: bold;
   padding: 10px;
   font-size: 15px;
+  text-align: center;
   img {
     width: 30px;
     margin-right: 15px;
@@ -125,6 +126,20 @@
   }
 }
 
-.createButton {
+
+.cancelButton {
   margin-left: auto;
+  margin-right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 100px;
+  background: var(--very-light-grey-color);
+  border-radius: 10px;
+  border: 1px solid var(--blue-app-color);
+  color: var(--blue-app-color);
+  font-weight: bold;
+  padding: 10px;
+  font-size: 15px;
+  text-align: center;
 }
