--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="headerRow">
 
-  <div class="logo">
+  <div class="logo cursor" (click)="changeView('home')">
     <img src="assets/imgs/header/popcorn.png"/>
     <p>{{'pageTitle.title' | translate}}</p>
   </div>
