--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -101,6 +101,10 @@ p {
   filter: invert(20%) sepia(76%) saturate(1950%) hue-rotate(211deg) brightness(94%) contrast(105%)
 }
 
+.blueIconBackground {
+  backdrop-filter: invert(20%) sepia(76%) saturate(1950%) hue-rotate(211deg) brightness(94%) contrast(105%);
+}
+
 .whiteIcon {
   filter: invert(98%) sepia(69%) saturate(280%) hue-rotate(182deg) brightness(115%) contrast(100%);
 }
