--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -36,7 +36,7 @@
     margin-bottom: 5px;
     background: var(--white-app-color);
     width: 100%;
-    min-width: 400px;
+    min-width: 200px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -83,6 +83,44 @@
     }
   }
 
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  .imgCol {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 150px;
+    min-height: 150px;
+    max-width: 300px;
+    max-height: 300px;
+    background: var(--light-background-color);
+    .imgBackground {
+      width: 100%;
+      height: 100%;
+
+      border-radius: 50%;
+      border: 1px solid var(--blue-app-color);
+
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
+
+  .nameLastnameCol {
+    width: 80%;
+    max-width: calc(80% - 300px);
+    min-width: calc(80% - 150px);
+    margin-left: auto;
+  }
 }
 
 .OrRow {
